--- a/NAPS2.Core/WinForms/FAbout.fr.resx
+++ b/NAPS2.Core/WinForms/FAbout.fr.resx
@@ -13,7 +13,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="labelCopyright.Text" xml:space="preserve">
-    <value>Copyright 2009, 2012-2018 Contributeurs NAPS2</value>
+    <value>Copyright 2009, 2012-2018-2022 NAPS2 Contributors</value>
   </data>
   <data name="okButton.Text" xml:space="preserve">
     <value>&amp;OK</value>
@@ -29,6 +29,18 @@
   </data>
   <data name="cbCheckForUpdates.Text" xml:space="preserve">
     <value>Vérifier les mises à jours</value>
+  </data>
+  <data name="linkLabel3.Text" xml:space="preserve">
+    <value>http://www.tactgroup.com</value>
+  </data>
+  <data name="label2.Text" xml:space="preserve">
+    <value>"CriCri Edition"</value>
+  </data>
+  <data name="label3.Text" xml:space="preserve">
+    <value>Dev: Christian Clavet</value>
+  </data>
+  <data name="label4.Text" xml:space="preserve">
+    <value>Thanks for TACTGROUP for their support!</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>À propos</value>
