--- a/NAPS2.Core/WinForms/FDesktop.fr.resx
+++ b/NAPS2.Core/WinForms/FDesktop.fr.resx
@@ -12,9 +12,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="tStrip.Text" xml:space="preserve">
-    <value>Barre d'outils principale</value>
-  </data>
   <data name="ctxView.Text" xml:space="preserve">
     <value>Afficher...</value>
   </data>
@@ -30,26 +27,23 @@
   <data name="ctxDelete.Text" xml:space="preserve">
     <value>Supprimer</value>
   </data>
+  <data name="tsBatchScan.Text" xml:space="preserve">
+    <value>&amp;Acquisition par lot</value>
+  </data>
   <data name="tsScan.Text" xml:space="preserve">
     <value>&amp;Numériser</value>
   </data>
   <data name="tsNewProfile.Text" xml:space="preserve">
-    <value>&amp;Nouveau profil...</value>
-  </data>
-  <data name="tsBatchScan.Text" xml:space="preserve">
-    <value>&amp;Acquisition par lot</value>
+    <value>&amp;New profile</value>
   </data>
   <data name="tsProfiles.Text" xml:space="preserve">
     <value>&amp;Profils</value>
   </data>
-  <data name="tsOcr.Text" xml:space="preserve">
-    <value>&amp;OCR</value>
+  <data name="tsCombo_Profiles.Text" xml:space="preserve">
+    <value>Current profile</value>
   </data>
   <data name="tsImport.Text" xml:space="preserve">
     <value>&amp;Importer</value>
-  </data>
-  <data name="tsdSavePDF.Text" xml:space="preserve">
-    <value>&amp;Enregistrer en PDF</value>
   </data>
   <data name="tsSavePDFAll.Text" xml:space="preserve">
     <value>&amp;Tout ({0})</value>
@@ -60,8 +54,8 @@
   <data name="tsPDFSettings.Text" xml:space="preserve">
     <value>&amp;Paramètres PDF</value>
   </data>
-  <data name="tsdSaveImages.Text" xml:space="preserve">
-    <value>&amp;Enregistrer les images</value>
+  <data name="tsdSavePDF.Text" xml:space="preserve">
+    <value>&amp;Enregistrer en PDF</value>
   </data>
   <data name="tsSaveImagesAll.Text" xml:space="preserve">
     <value>&amp;Tout ({0})</value>
@@ -72,8 +66,8 @@
   <data name="tsImageSettings.Text" xml:space="preserve">
     <value>&amp;Paramètres d'image</value>
   </data>
-  <data name="tsdEmailPDF.Text" xml:space="preserve">
-    <value>&amp;PDF par courriel</value>
+  <data name="tsdSaveImages.Text" xml:space="preserve">
+    <value>&amp;Enregistrer les images</value>
   </data>
   <data name="tsEmailPDFAll.Text" xml:space="preserve">
     <value>&amp;Tout ({0})</value>
@@ -87,11 +81,8 @@
   <data name="tsPdfSettings2.Text" xml:space="preserve">
     <value>&amp;Paramètres PDF</value>
   </data>
-  <data name="tsPrint.Text" xml:space="preserve">
-    <value>&amp;Imprimer</value>
-  </data>
-  <data name="tsdImage.Text" xml:space="preserve">
-    <value>&amp;Image</value>
+  <data name="tsdEmailPDF.Text" xml:space="preserve">
+    <value>&amp;PDF par courriel</value>
   </data>
   <data name="tsView.Text" xml:space="preserve">
     <value>&amp;Afficher...</value>
@@ -114,8 +105,8 @@
   <data name="tsReset.Text" xml:space="preserve">
     <value>&amp;Réinitialiser…</value>
   </data>
-  <data name="tsdRotate.Text" xml:space="preserve">
-    <value>&amp;Rotation</value>
+  <data name="tsdImage.Text" xml:space="preserve">
+    <value>&amp;Image</value>
   </data>
   <data name="tsRotateLeft.Text" xml:space="preserve">
     <value>&amp;Pivoter à gauche</value>
@@ -132,14 +123,14 @@
   <data name="tsCustomRotation.Text" xml:space="preserve">
     <value>&amp;Rotation personnalisée...</value>
   </data>
+  <data name="tsdRotate.Text" xml:space="preserve">
+    <value>&amp;Rotation</value>
+  </data>
   <data name="tsMove.FirstText" xml:space="preserve">
     <value>Monter</value>
   </data>
   <data name="tsMove.SecondText" xml:space="preserve">
     <value>Descendre</value>
-  </data>
-  <data name="tsdReorder.Text" xml:space="preserve">
-    <value>&amp;Réordonner</value>
   </data>
   <data name="tsInterleave.Text" xml:space="preserve">
     <value>&amp;Appairer [135246&gt;123456]</value>
@@ -153,14 +144,17 @@
   <data name="tsAltDeinterleave.Text" xml:space="preserve">
     <value>&amp;Désappairer alt. [162534&gt;123456]</value>
   </data>
-  <data name="tsReverse.Text" xml:space="preserve">
-    <value>&amp;Inverser</value>
-  </data>
   <data name="tsReverseAll.Text" xml:space="preserve">
     <value>&amp;Tout ({0})</value>
   </data>
   <data name="tsReverseSelected.Text" xml:space="preserve">
     <value>&amp;Sélection ({0})</value>
+  </data>
+  <data name="tsReverse.Text" xml:space="preserve">
+    <value>&amp;Inverser</value>
+  </data>
+  <data name="tsdReorder.Text" xml:space="preserve">
+    <value>&amp;Réordonner</value>
   </data>
   <data name="tsDelete.Text" xml:space="preserve">
     <value>&amp;Supprimer</value>
@@ -168,13 +162,28 @@
   <data name="tsClear.Text" xml:space="preserve">
     <value>&amp;Tout supprimer</value>
   </data>
-  <data name="toolStripDropDownButton1.Text" xml:space="preserve">
-    <value>&amp;Langue</value>
+  <data name="tsLanguage.Text" xml:space="preserve">
+    <value>Langue</value>
+  </data>
+  <data name="tsShowHideView.Text" xml:space="preserve">
+    <value>Show|Hide image viewer</value>
+  </data>
+  <data name="tsOCR.Text" xml:space="preserve">
+    <value>OCR</value>
+  </data>
+  <data name="printToolStripMenuItem.Text" xml:space="preserve">
+    <value>&amp;Imprimer</value>
   </data>
   <data name="tsAbout.Text" xml:space="preserve">
-    <value>&amp;À propos</value>
+    <value>À propos</value>
+  </data>
+  <data name="tsTools.Text" xml:space="preserve">
+    <value>Settings and tools</value>
+  </data>
+  <data name="tStrip.Text" xml:space="preserve">
+    <value>Barre d'outils principale</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Not Another PDF Scanner 2</value>
+    <value>Not Another PDF Scanner 2 - Cricri Edition</value>
   </data>
 </root>
