--- a/NAPS2.Core/WinForms/FViewer.fr.resx
+++ b/NAPS2.Core/WinForms/FViewer.fr.resx
@@ -12,6 +12,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="toolStripStatusLabel1.Text" xml:space="preserve">
+    <value>Status</value>
+  </data>
+  <data name="statusStrip1.Text" xml:space="preserve">
+    <value>statusStrip1</value>
+  </data>
   <data name="lblPageTotal.Text" xml:space="preserve">
     <value>de {0}</value>
   </data>
@@ -20,6 +26,21 @@
   </data>
   <data name="tsNext.Text" xml:space="preserve">
     <value>Suivant</value>
+  </data>
+  <data name="tsRotateLeft.Text" xml:space="preserve">
+    <value>Pivoter à gauche</value>
+  </data>
+  <data name="tsRotateRight.Text" xml:space="preserve">
+    <value>Pivoter à droite</value>
+  </data>
+  <data name="tsFlip.Text" xml:space="preserve">
+    <value>Retourner</value>
+  </data>
+  <data name="tsDeskew.Text" xml:space="preserve">
+    <value>Réaligner</value>
+  </data>
+  <data name="tsCustomRotation.Text" xml:space="preserve">
+    <value>Rotation personnalisée...</value>
   </data>
   <data name="tsdRotate.Text" xml:space="preserve">
     <value>Rotation</value>
@@ -48,20 +69,23 @@
   <data name="tsDelete.Text" xml:space="preserve">
     <value>Supprimer</value>
   </data>
-  <data name="tsRotateLeft.Text" xml:space="preserve">
-    <value>Pivoter à gauche</value>
+  <data name="Scan.Text" xml:space="preserve">
+    <value>&amp;Numériser</value>
   </data>
-  <data name="tsRotateRight.Text" xml:space="preserve">
-    <value>Pivoter à droite</value>
+  <data name="toolStripButton1.Text" xml:space="preserve">
+    <value>Rescan</value>
   </data>
-  <data name="tsFlip.Text" xml:space="preserve">
-    <value>Retourner</value>
+  <data name="toolStripButton2.Text" xml:space="preserve">
+    <value>Add</value>
   </data>
-  <data name="tsDeskew.Text" xml:space="preserve">
-    <value>Réaligner</value>
+  <data name="toolStripButton2.ToolTipText" xml:space="preserve">
+    <value>Add more pages</value>
   </data>
-  <data name="tsCustomRotation.Text" xml:space="preserve">
-    <value>Rotation personnalisée...</value>
+  <data name="toolStripButton3.Text" xml:space="preserve">
+    <value>Insert before</value>
+  </data>
+  <data name="toolStrip2.Text" xml:space="preserve">
+    <value>toolStrip2</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Aperçu </value>
