--- a/NAPS2.Core/WinForms/FDesktop.resx
+++ b/NAPS2.Core/WinForms/FDesktop.resx
@@ -132,7 +132,7 @@
     <value>0, 0</value>
   </data>
   <data name="statusStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1102, 22</value>
+    <value>1180, 22</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="statusStrip1.TabIndex" type="System.Int32, mscorlib">
@@ -181,7 +181,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnZoomIn.Location" type="System.Drawing.Point, System.Drawing">
-    <value>27, 394</value>
+    <value>27, 381</value>
   </data>
   <data name="btnZoomIn.Size" type="System.Drawing.Size, System.Drawing">
     <value>23, 23</value>
@@ -214,7 +214,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnZoomOut.Location" type="System.Drawing.Point, System.Drawing">
-    <value>5, 394</value>
+    <value>5, 381</value>
   </data>
   <data name="btnZoomOut.Size" type="System.Drawing.Size, System.Drawing">
     <value>23, 23</value>
@@ -328,7 +328,7 @@
     <value>0, 0</value>
   </data>
   <data name="thumbnailList1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>584, 420</value>
+    <value>625, 407</value>
   </data>
   <data name="thumbnailList1.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -337,7 +337,7 @@
     <value>thumbnailList1</value>
   </data>
   <data name="&gt;&gt;thumbnailList1.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.ThumbnailList, NAPS2.Core, Version=6.1.2.18429, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.ThumbnailList, NAPS2.Core, Version=7.0.0.25129, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;thumbnailList1.Parent" xml:space="preserve">
     <value>splitContainer1.Panel1</value>
@@ -367,7 +367,7 @@
     <value>0, 0</value>
   </data>
   <data name="tiffViewerCtl1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>514, 420</value>
+    <value>551, 407</value>
   </data>
   <data name="tiffViewerCtl1.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -376,7 +376,7 @@
     <value>tiffViewerCtl1</value>
   </data>
   <data name="&gt;&gt;tiffViewerCtl1.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.TiffViewerCtl, NAPS2.Core, Version=6.1.2.18429, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.TiffViewerCtl, NAPS2.Core, Version=7.0.0.25129, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;tiffViewerCtl1.Parent" xml:space="preserve">
     <value>splitContainer1.Panel2</value>
@@ -397,10 +397,10 @@
     <value>1</value>
   </data>
   <data name="splitContainer1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1102, 420</value>
+    <value>1180, 407</value>
   </data>
   <data name="splitContainer1.SplitterDistance" type="System.Int32, mscorlib">
-    <value>584</value>
+    <value>625</value>
   </data>
   <data name="splitContainer1.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -418,7 +418,7 @@
     <value>0</value>
   </data>
   <data name="toolStripContainer1.ContentPanel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1102, 420</value>
+    <value>1180, 407</value>
   </data>
   <data name="&gt;&gt;toolStripContainer1.ContentPanel.Name" xml:space="preserve">
     <value>toolStripContainer1.ContentPanel</value>
@@ -463,7 +463,7 @@
     <value>2</value>
   </data>
   <data name="toolStripContainer1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1102, 496</value>
+    <value>1180, 483</value>
   </data>
   <data name="toolStripContainer1.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -493,6 +493,38 @@
     <value>Sca&amp;n</value>
   </data>
   <data name="tsScan.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
+    <value>ImageAboveText</value>
+  </data>
+  <data name="tsInsert.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMiSURBVFhHtZdLTxNRGIZJVOLGxEYcI15+gGyMGxdKXLgy
+        /gMX/gR/AhdRF7J2R4wghMTSTkuRoIkGoRSFxPgHhFJKb7TTC6U3Wj6/95zOWHRKOnh8kydtmjnv9845
+        c8587TpG3W6vl6DN8BaFtyK0Fdn+J+ABLwjeqCFL2ctlBojw4Gh0RwnwgpoBXLKUvTS31yMujsbiFIsn
+        lAAvCN6oIUvZS3N7ZIBEMknJVEoJ8ILgjRqylL2sAKndNO2mM0qAF+QogJHJkmEogr0gRwHy+YJSIEcB
+        9opFpUCOApRKJaVArQG6rz3/SL3PPuCH1oNBm2luw0qlxlQVUROerQFcl0cW6NWPEvUMzbeG0Ly6DNBo
+        NKhRr6uBvaDmQSQCaJeeztPLb3kaXSvQhaH3Zggt4NfFxf9DHp/vaICRUJZujIXpxdccnR8UM9E79Wbs
+        k+7TxXQpg+/co+v0enw8yDUuWgGGV3J0ZyJCd99u03CoQGcHFhDiJnOPua8YePYx5xgZYJADPHgXpYfu
+        GA39DnCd6cE1isGdo/hpRgYYCOboUSBBj+fT5JJL0L8Q8CZCqyH6srx8YpZXVigwN5dkvzMoZie5BKsF
+        evI5xztBPIT9TJ+qh7BWrZJ/djbGnrYhNGzD0e9l0oblnTNXmSteXfYDG5thCTcTHcHX/twIi7ETk5Pi
+        s1KpkO73x9n3rxCaPIjEmpvFxTacaTYk6GYi21GGG4qOiIox0OT0NGWzOfG9XC6T2+32svcpxhK6klvM
+        bcYsDnFDIgNEYzvcTKAp6RyMgaY4QIWXIM2vYggzwTd2JAQKIgQwi0PWuyCeSHIjgWaic2I8BsIMQAhh
+        zkSVv+s+X4BriF3QTlaAZGpXNBJOwBhobX1dhMBM4NN8JpaCQSy5OAfayQqQNjKUMQxHpDMZ2t+Xbz47
+        LfIW5RriJGwnK0A2lzsRRpY7oD/IMNDi0hIC4FBqKytAobCnjHx+T3g6ClAs7isFchQA+1clkKMAtVpV
+        bB1VQI4C1OsNOjioK0J2RI4CQIeHh0ow1UkA84i2ayhUAO9j/5yaRzRS/g/Yu6v7Fwi+DUP9Tz7qAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="tsInsert.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
+    <value>Magenta</value>
+  </data>
+  <data name="tsInsert.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 51</value>
+  </data>
+  <data name="tsInsert.Text" xml:space="preserve">
+    <value>Scan Insert</value>
+  </data>
+  <data name="tsInsert.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
     <value>ImageAboveText</value>
   </data>
   <data name="toolStripSeparator13.Size" type="System.Drawing.Size, System.Drawing">
@@ -931,7 +963,7 @@
     <value>3, 0</value>
   </data>
   <data name="tStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1090, 54</value>
+    <value>1177, 54</value>
   </data>
   <data name="tStrip.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -1042,7 +1074,7 @@
     <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1102, 496</value>
+    <value>1180, 483</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1130,6 +1162,12 @@
   </data>
   <data name="&gt;&gt;tsBatchScan.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tsInsert.Name" xml:space="preserve">
+    <value>tsInsert</value>
+  </data>
+  <data name="&gt;&gt;tsInsert.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;tsCombo_Profiles.Name" xml:space="preserve">
     <value>tsCombo_Profiles</value>
@@ -1369,7 +1407,7 @@
     <value>tsMove</value>
   </data>
   <data name="&gt;&gt;tsMove.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.ToolStripDoubleButton, NAPS2.Core, Version=6.1.2.18429, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.ToolStripDoubleButton, NAPS2.Core, Version=7.0.0.25129, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;tsdReorder.Name" xml:space="preserve">
     <value>tsdReorder</value>
@@ -1513,6 +1551,6 @@
     <value>FDesktop</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=6.1.2.18429, Culture=neutral, PublicKeyToken=null</value>
+    <value>NAPS2.WinForms.FormBase, NAPS2.Core, Version=7.0.0.25129, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
